# ple_chat_bot

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bot/: __init__.py  chatbot.py  perguntador.py
bot/plebot/: bert_qa.py
bot/servicos/: bertQA.py  bertTokenizerconnection.py  gloveconnection.py
certs/: cert.pem  key.pem
docker_images/api/: Dockerfile
examples/: example.json
notebooks/: bert_train.ipynb  read_json.ipynb  sentence_similarity.ipynb  similarity_dataset.ipynb  tesseractOCR.ipynb
resources/: README.md  data_final.json  data_final2.json  documento_oficial.json
resources/ufrpe/: qa.txt
resources/ufrpe/ufrpe/: items.py  pipelines.py  settings.py
resources/ufrpe/ufrpe/spiders/: plebot.py
resources/wordembeeding/: baixar_embeeding.txt
src/: config.py  main.py  telegram_run.py
ufrpe_bot/: __init__.py  bot.py  perguntador.py
ufrpe_bot/questionadores/: __init__.py
ufrpe_bot/questionadores/transf/: __init__.py  bert_qa.py
ufrpe_bot/servicos/: bertQA.py  documentoOficial.py  gloveconnection.py
ufrpe_bot/utils/: utils.py
