[tool.poetry]
name = "ple_chat_bot"
version = "0.1.0"
description = "Projeto da cadeira de Mineração de dados educacionais da UFRPE"
authors = ["Your Name <you@example.com>"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = "3.8"
attrs = "20.2.0"
CacheControl = "0.12.6"
cachy = "0.3.0"
certifi = "2020.6.20"
cffi = "1.14.3"
chardet = "3.0.4"
cleo = "0.7.6"
clikit = "0.4.3"
cryptography = "3.1.1"
html5lib = "1.1"
idna = "2.10"
importlib-metadata = "1.1.3"
jeepney = "0.4.3"
jsonschema = "3.2.0"
keyring = "20.0.1"
lockfile = "0.12.2"
msgpack = "1.0.0"
pastel = "0.2.1"
pexpect = "4.8.0"
pkginfo = "1.5.0.1"
poetry = "1.0.10"
ptyprocess = "0.6.0"
pycparser = "2.20"
pylev = "1.3.0"
pyparsing = "2.4.7"
pyrsistent = "0.14.11"
requests = "2.24.0"
requests-toolbelt = "0.8.0"
SecretStorage = "3.1.2"
shellingham = "1.3.2"
six = "1.15.0"
tomlkit = "0.5.11"
urllib3 = "1.25.10"
webencodings = "0.5.1"
zipp = "3.2.0"
scrapy = "^2.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
